--- a/Cartas JW/Styles/scss/main.scss
+++ b/Cartas JW/Styles/scss/main.scss
@@ -19,7 +19,8 @@ div.carta {
         font-weight: bold;
     }
     p {
-        font-size: 24px;
+        font-size: 32px;
+        font-family: Arial, Helvetica, sans-serif;
         span {
             color: rgb(26, 58, 186);
             font-weight: bold;
